# Explaining-Loan-Approval-Decisions-with-SHAP-and-LIME

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
Desktop/Intern_project/: IBM_intraday.csv  MSFT_intraday.csv
Desktop/bu-webtech-js/: README.md
artifacts/models/: logistic_regression_metrics.json  logistic_regression_pipeline.joblib
configs/: pipeline.yaml
data/processed/: processed_credit.parquet  test.parquet  train.parquet  validation.parquet
reports/explanations/: logistic_regression_shap_feature_importance.html  logistic_regression_summary.json  random_forest_summary.json
reports/explanations/logistic_regression_lime/: lime_instance_2928.html  lime_instance_415.html
reports/explanations/random_forest_lime/: lime_instance_2928.html  lime_instance_415.html
scripts/: generate_explanations.py  prepare_data.py  train_model.py  visualize_explanations.py
src/data/: prepare.py
src/models/: explain.py  train.py
src/visualization/: shap_plots.py
tests/: test_explain.py  test_prepare.py  test_train.py
