[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py310']
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
known_third_party = [
    "pandas",
    "numpy",
    "sklearn",
    "imblearn",
    "category_encoders",
    "shap",
    "lime",
    "matplotlib",
    "plotly",
    "dotenv",
    "mlflow",
    "streamlit",
    "fastapi",
    "uvicorn",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "B", "I"]
ignore = ["E203", "E266", "E501", "F401"]
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
